# app_notification_test2

./: README.md  pyproject.toml  requirements.txt
src/: main.py
