[project]
name = "Masjed"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Ahmed Hamdy", email = "a29870365@gmail.com" }
]
dependencies = [
    "flet>=0.86.0",
    "android-notify"
]

[dependency-groups]
dev = [
    "flet-cli>=0.86.0",
    "flet-desktop>=0.86.0",
    "flet-web>=0.86.0",
    # Integration testing with `flet test` / pytest. The `test` extra brings in
    # pytest, pytest-asyncio and the screenshot-comparison dependencies.

]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.flet]
org = "com.ahmed.Masjed"
product = "masjed"
company = "Abo Hamdy"
copyright = "Copyright (C) 2023-2026 by Abo Hamdy"

[tool.flet.app]
path = "src"
